--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -7,6 +7,7 @@
 		'footer footer footer footer';
 	grid-template-columns: auto 230px minmax(320px, 1200px) auto;
 	grid-template-rows: auto 1fr auto;
+  gap: 0 30px;
 }
 
 .header {
