--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,9 +3,11 @@
 	--primary: #7653FC;
 	--primary-hover: #5D37F4;
 	--black: #3B434E;
+	--black-light: #787D85;
 	--gray: #B3C0D9;
 	--gray-light: #EBEBEB;
 	--white: white;
+	--white-gray: #DFDFDF;
 	--orange: #FC836D;
 	--green: #1DC37E;
 	--green-light: #C8F8E4;
